# betsy

./: README.md  pyproject.toml
.github/workflows/: test.yml
src/betsy/: __init__.py  metrics.py
src/betsy/assets/: __init__.py  index.template.html
tests/: test_betsy.py  test_metrics.py
