[project]
name = "betsy"
dynamic = ["version"]
description = "Python project dependency crawler"
authors = [{ name = "Gabriele N. Tornetta", email = "phoenix1987@gmail.com" }]
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = ["graphviz>=0.19.1,<0.20"]

[project.scripts]
betsy = "betsy:main"

[dependency-groups]
dev = ["pytest>=8,<9", "ruff>=0.8,<1", "mypy>=1.13,<2"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/betsy"]
artifacts = ["src/betsy/assets/*.html"]

[tool.hatch.envs.test]
dependencies = ["pytest>=8,<9"]

[tool.hatch.envs.test.scripts]
run = "pytest {args:tests}"

[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13", "3.14"]

[tool.hatch.envs.lint]
dependencies = ["ruff>=0.8,<1", "mypy>=1.13,<2"]

[tool.hatch.envs.lint.scripts]
check = "ruff check {args:.}"
format-check = "ruff format --check {args:.}"
format = "ruff format {args:.}"
fix = "ruff check --fix {args:.}"
typecheck = "mypy {args:src}"
all = ["check", "format-check", "typecheck"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
ignore_missing_imports = true
strict = true
